# rmCalendarMacOS

./: .gitignore  README.md  config.example.toml  deploy.sh  generate_my_planner.py  grant_calendar_access.py  pyproject.toml
.github/workflows/: release.yml
Formula/: rmcal.rb
scripts/: generate_screenshots.py
src/rmcal/: __init__.py  __main__.py  config.py  daemon.py  models.py  state.py  tui.py
src/rmcal/calendar/: fetcher.py  macos.py  parser.py
src/rmcal/i18n/: translations.py
src/rmcal/planner/: generator.py  navigation.py  styles.py
src/rmcal/planner/layouts/: day.py  meeting_notes.py  month.py  week.py  year.py
src/rmcal/remarkable/: annotations.py  cloud.py  sleep_screen.py  ssh.py  upload.py
tests/: test_calendar.py  test_cloud.py  test_config.py  test_planner.py  test_remarkable.py  test_state.py
tests/fixtures/: sample.ics
